// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/BasicTag render diff color tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 2`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 3`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 4`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 5`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 6`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-n606vz css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 7`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-n606vz css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1q0n2j9 css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 8`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-n606vz css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1q0n2j9 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-8cend7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 9`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-n606vz css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1q0n2j9 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-8cend7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-96wxh3 css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 10`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-n606vz css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1q0n2j9 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-8cend7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-96wxh3 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-xgtprv css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 11`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-n606vz css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1q0n2j9 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-8cend7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-96wxh3 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-xgtprv css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-18lqh3u css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 12`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-17gmaof css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-n606vz css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1q0n2j9 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-8cend7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-96wxh3 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-xgtprv css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-18lqh3u css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-dfzxkh css-dev-only-do-not-override-txh9fw"
      style="background-color: gray;"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff size tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-large-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff size tag 2`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-large-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff size tag 3`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-large-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;
